Update and rename 2019-07-27-cfb.md to 2019-07-27-cfb_zh.md

--- a/zh/_posts/2019-07-27-cfb_zh.md
+++ b/zh/_posts/2019-07-27-cfb_zh.md
@@ -2,7 +2,7 @@
 layout: post
 title: "寻求让家庭活下去的赔偿：湖南尘肺病工人一年的斗争"
 date: 2019-07-27
-tags: [resources-zh, chenfei]
+tags: [resources-zh, chenfei-zh]
 image: images/cfb.jpg
 lang: zh
 lang-ref: 2019-07-27-cfb
