Update and rename hk/_posts/2019-07-27-cfb_hk.md to zht/_posts/2019-07-27-cfb_zht.md

--- a/zht/_posts/2019-07-27-cfb_zht.md
+++ b/zht/_posts/2019-07-27-cfb_zht.md
@@ -2,9 +2,9 @@
 layout: post
 title: "尋求讓家庭活下去的賠償：湖南塵肺病工人一年的鬥爭"
 date: 2019-07-27
-tags: [resources-hk, chenfei-hk]
+tags: [resources-zht, chenfei-zht]
 image: images/cfb.jpg
-lang: hk
+lang: zht
 lang-ref: 2019-07-27-cfb
 excerpt_separator: <!--more-->
 
